force-app/main/default/objects/Course__c/Course__c.object-meta.xml
<CustomObject>
    <description>Represents a course offered through the course management system.</description>
    <label>Course</label>
    <nameField>
        <displayFormat>CRS-{0000}</displayFormat>
        <label>Course Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>