force-app/main/default/objects/Course__c/fields/Classroom__c.field-meta.xml
<CustomField>
    <fullName>Classroom__c</fullName>
    <label>Classroom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Room 101</fullName>
            </value>
            <value>
                <fullName>Room 102</fullName>
            </value>
            <value>
                <fullName>Room 103</fullName>
            </value>
            <value>
                <fullName>Room 104</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>