force-app/main/default/objects/Course__c/fields/Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Name__c</fullName>
    <formula>BLANKVALUE(Instructor_User__r.FirstName &amp; &apos; &apos;, &apos;&apos;) &amp; Instructor_User__r.LastName</formula>
    <label>Instructor Name</label>
    <type>Text</type>
</CustomField>