force-app/main/default/objects/Course__c/fields/Is_Current_Semester__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Semester__c</fullName>
    <formula>TEXT(Semester__c) = $CustomMetadata.CourseCalendarConfig__mdt.Default.Semester__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Semester</label>
    <type>Checkbox</type>
</CustomField>