force-app/main/default/objects/Course__c/fields/Public_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Id__c</fullName>
    <label>Public Group Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>