force-app/main/default/objects/Course__c/validationRules/Instructor_User_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Instructor_User_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Instructor_User__c)</errorConditionFormula>
    <errorDisplayField>Instructor_User__c</errorDisplayField>
    <errorMessage>An instructor must be assigned to this course.</errorMessage>
</ValidationRule>