force-app/main/default/objects/Course__c/listViews/All_Courses.listView-meta.xml
<ListView>
    <fullName>All_Courses</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Instructor__c</columns>
    <columns>Instructor_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Courses</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>