force-app/main/default/objects/Course__c/listViews/Current_Semester_Courses.listView-meta.xml
<ListView>
    <fullName>Current_Semester_Courses</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Instructor_User__c</columns>
    <columns>Semester__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Current_Semester__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Current Semester&apos;s Courses</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>